--- a/css/login.css
+++ b/css/login.css
@@ -26,7 +26,7 @@
     font-style: normal;
     font-weight: 600;
     font-size: 45px;
-    line-height: 54px;
+    line-height: 54.46px;
 
     color: #DB7608;
     font-family: 'Montserrat';
@@ -98,12 +98,19 @@
     position: absolute;
     width: 312px;
     height: 76px;
-    left: 720px;
-    top: 795px;
+    left: 620px;
+    bottom: 55px;
+
+    font-family: 'Montserrat';
+    font-size: 35px;
+    line-height: 42px;
+
+    color: #FFFFFF;
 
     background: rgba(227, 135, 36, 0.92);
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.28);
     border-radius: 15px;
+    border-color: #E49846;
 }
 
 a{
@@ -116,23 +123,30 @@ a{
     left: 79%;
     top: 56%;
 
-    font-family: 'Inter';
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 25px;
     line-height: 30px;
-    /* identical to box height */
-
-
     color: #E49846;
 }
 
+#esqueci-senha:hover{
+    color: #B7640B;
+}
 
 #cadastrar{
-    color: #FFFFFF;
-    background-color: #DB7608;
     font-family: 'Montserrat';
-    background:#DB7608;
+    font-weight:600px;
+    font-size: 23px;
+    line-height: 36.31px;
+    position: absolute;
+    left: 700px;
+    bottom: 195px;
+    height: 50px;
+    width: 153px;
+    color: #FFFFFF;
+    background: rgba(219, 118, 8, 0.75);
     border-radius: 15px;
-    border-color: #DB7608;
+    border-color: #E49846;
 }
