--- a/css/home.css
+++ b/css/home.css
@@ -1,12 +1,9 @@
 #contato{
     font-family: 'Montserrat';
     text-align: center;
-}
-
-#voltar-home{
-    font-family: 'Montserrat';
     position: relative;
-    left: rem;
+    top: 2500px;
+    margin-bottom: 130px;
 }
 
 .icon{
@@ -27,6 +24,7 @@
     Height:451px;
     position: relative;
     right: -30px;
+    top: 2450px;
 }
 
 #logo{
@@ -37,30 +35,440 @@
     top: 30px;
 }
 
+#botao-voltar{
+    position: relative;
+    left: 1050px;
+    background-color: #064275;
+    bottom: -1100px;
+    width: 150px;
+    height: 60px;
+    font-family: 'Montserrat';
+    box-shadow: 0px 4px 14px rgba(107, 105, 105, 0.28);
+    border-radius: 15px;
+    border-color: #064275;
+    font-weight: 600;
+    font-size: 15px;
+    top:2330px;
+}
+
+a{
+    text-decoration: none;
+    color:  #ffffff;
+}
+
+#botao-falso{
+    position: absolute;
+    position: absolute;
+    width: 130px;
+    height: 60px;
+    left: 8px;
+    top: -36px;
+    background: #328AEF;
+    border-radius: 15px;
+    border-color: #328AEF;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 42px;
+    color: #FFFFFF;
+}
+
+#card-titulo{
+    position: absolute;
+    width: 1006px;
+    height: 42px;
+    left: 39px;
+    top: 1700px;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 35px;
+    line-height: 42px;
+
+    color: #18456B;
+}
+
+.card-voluntario{
+    box-sizing: border-box;
+    position: absolute;
+    width: 336px;
+    height: 420px;
+    top: 2380px;
+    left: 260px;
+
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: -7px 14px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+
+#titulo-voluntario{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 36px;
+    position: relative;
+    left: 5px;
+    top: -20px;
+
+    color: #0537B5;;
+}
+
+#texto-voluntario{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 22px;
+    position: relative;
+    left: 3px;
+    top: -43px;
+
+    color: #18456B;
+}
+
+#cadastro-voluntario{
+    background: #0537B5;
+    border-radius: 15px;
+    position: absolute;
+    left: 49.58%;
+    right: 0.55%;
+    top: 91.61%;
+    bottom: 0.32%;
+    border-color: #0537B5;
+    }
+
+#img-voluntario{
+    position: relative;
+    left: -1px;
+    top: -3px;
+    height: 255px;
+    }
+
+.card-login{
+    box-sizing: border-box;
+    position: absolute;
+    width: 336px;
+    height: 420px;
+    left: 720px;
+    top: 2380px;
+
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: -7px 14px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+
+#titulo-login{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 36px;
+    position: relative;
+    left: 5px;
+    top: -20px;
+
+    color: #DB7608;
+}
+
+#texto-login{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 22px;
+    position: relative;
+    left: 5px;
+    top: -35px;
+
+    color: #18456B;
+}
+
+#cadastro-login{
+    background: #DB7608;
+    border-radius: 15px;
+    position: absolute;
+    left: 49.58%;
+    right: 0.55%;
+    top: 91.61%;
+    bottom: 0.32%;
+    border-color: #DB7608;
+    }
+
+#img-login{
+    position: relative;
+    left: -1px;
+    top: -2px;
+    height: 250px;
+    }
+
+.card-distribuidor{
+    box-sizing: border-box;
+    top: 1850px;
+    position: absolute;
+    width: 336px;
+    height: 420px;
+    left: 145px;
+
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: -7px 14px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+
+#titulo-distribuidor{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 36px;
+    position: relative;
+    left: 5px;
+    top: -20px;
+
+    color: #328AEF;
+}
+
+#texto-distribuidor{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 22px;
+    position: relative;
+    left: 3px;
+    top: -43px;
+
+    color: #328AEF;
+}
+
+#cadastro-distribuidor{
+    background: #328AEF;
+    border-radius: 15px;
+    position: absolute;
+    left: 49.58%;
+    right: 0.55%;
+    top: 91.61%;
+    bottom: 0.32%;
+    border-color: #328AEF;
+    }
+
+#img-distribuidor{
+    position: relative;
+    top: -3px;
+    left: -1px;
+    height: 249px;
+    }
+
+.card-coletor{
+    box-sizing: border-box;
+    left: 505px;
+    position: absolute;
+    width: 336px;
+    height: 420px;
+    top: 1850px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: -7px 14px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+
+#img-coletor{
+    position: relative;
+    top: -3px;
+    left: -1px;
+    height: 241px;;
+    }
+
+#titulo-coletor{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 36px;
+        position: relative;
+        left:5px;
+        top: -27px;
+    
+        color: #BB844B;
+    }
+    
+#texto-coletor{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 22px;
+        position: relative;
+        left: 5px;
+        top: -45px;
+    
+        color: #18456B;
+}
+    
+#cadastro-coletor{
+        background: #BB844B;
+        border-radius: 15px;
+        position: absolute;
+        left: 49.58%;
+        right: 0.55%;
+        top: 91.61%;
+        bottom: 0.32%;
+        border-color: #BB844B;
+}
+
+.card{
+    box-sizing: border-box;
+    left: 866px;
+    position: absolute;
+    width: 336px;
+    height: 420px;
+    top: 1850px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: -7px 14px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+
+#img-produtor{
+    position: relative;
+    left: -1px;
+    top: -3px;
+    height: 243px;
+    }
+
+#titulo-produtor{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 36px;
+        position: relative;
+        left:5px;
+        top: -27px;
+    
+        color: #638A02;
+    }
+    
+#texto-produtor{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 22px;
+        position: relative;
+        left: 5px;
+        top: -45px;
+    
+        color: #18456B;
+}
+    
+#cadastro{
+        background: #638A02;
+        border-radius: 15px;
+        position: absolute;
+        left: 49.58%;
+        right: 0.55%;
+        top: 91.61%;
+        bottom: 0.32%;
+        border-color: #638A02;
+}
+
+#carousel-titulo{
+    position: absolute;
+    width: 485px;
+    height: 42px;
+    left: 39px;
+    top: 563px;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 35px;
+    line-height: 42px;
+
+    color: #18456B;
+}
+
+.mySlides1 {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
 /* Next & previous buttons */
 .prev, .next {
-    cursor: pointer;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a grey background color */
+.prev:hover, .next:hover {
+  background-color: #f1f1f1;
+  color: black;
+}
+
+#img-ajude{
     position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a grey background color */
-  .prev:hover, .next:hover {
-    background-color: #f1f1f1;
-    color: black;
-  }
+    width: 662.22px;
+    height: 252.53px;
+    left: 20.78px;
+    top: 1.01px;
+
+    background: url(Capa-Blog-4.png);
+    border-radius: 15px 15px 120px 0px;
+}
+
+#texto-ajude{
+    position: absolute;
+    width: 663px;
+    height: 424.96px;
+    left: 20px;
+    top: 0px;
+
+    background: #FFFFFF;
+    box-shadow: -7px 14px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+
+#titulo-ajude{
+    position: absolute;
+    width: 402px;
+    height: 42.26px;
+    left: 30px;
+    top: 259.56px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 35px;
+    line-height: 42px;
+    /* identical to box height */
+
+
+    color: #783206;
+
+}
