--- a/css/login.css
+++ b/css/login.css
@@ -12,6 +12,19 @@
     margin-bottom: 100px;
 }
 
+#visualizar{
+    position: relative;
+    left: 300px;
+    top: -330px;
+}
+
+h5{
+    display: inline;
+    position: relative;
+    left: 300px;
+    top: -330px;
+}
+
 #textEmail{
     font-family: 'Montserrat';
     position: relative;
@@ -130,7 +143,7 @@ a{
 #esqueci-senha{
     position: absolute;
     left: 79%;
-    top: 56%;
+    top: 60%;
 
     font-family: 'Montserrat';
     font-style: normal;
