--- a/css/login-administrador.css
+++ b/css/login-administrador.css
@@ -14,15 +14,15 @@
 
 #visualizar{
     position: relative;
-    left: 300px;
-    top: 350px;
+    left: 115px;
+    top: 355px;
 }
 
 h5{
     display: inline;
     position: relative;
-    left: 300px;
-    top: 350px;
+    left: 115px;
+    top: 353px;
 }
 
 #titulo-vermelho{
@@ -108,6 +108,12 @@ h5{
     box-shadow: 0px 4px 14px rgb(0 0 0 / 28%);
     border-radius: 15px;
     border-color: #e02130;
+}
+
+#botao-vermelho:hover{
+    background: rgba(224, 33, 48, 0.8);
+    border-radius: 15px;
+    border-color: rgba(224, 33, 48, 0.8);
 }
 
 a{
