--- a/css/cadastro-distribuidor.css
+++ b/css/cadastro-distribuidor.css
@@ -208,8 +208,13 @@
     #328AEF;
     border-radius: 300px;
 }
+#volta-pag{
+    position: relative;
+    left: 325px;
+    top: 47px;
+}
 
-#botao-azul-claro{
+#submit{
     box-sizing: border-box;
     position: absolute;
     width: 260px;
