--- a/css/alimento.css
+++ b/css/alimento.css
@@ -3,22 +3,51 @@ body{
 }
 
 #seta{
-    position: relative;
-    top: -90px;
-    left: -160px;
+    position: absolute;
+    left: -16.66%;
+    top: -25.26%;
+    bottom: 95.66%;
 }
 
 #logo{
     position: absolute;
-    left: 12.79%;
-    top: 20%;
+    left: 3.79%;
+    top:15%;
+}
+
+#titulo-header{
+    position: absolute;
+    width: 292px;
+    height: 48px;
+    left: 60px;
+    top: 240px;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 33px;
+    line-height: 48px;
+
+    color: #18456B;
+}
+
+#efeito{
+    position: absolute;
+    width: 611px;
+    height: 432px;
+    left: 0px;
+    top: 0px;
+
+    background: url(/img/pag-home/EFEITO.png);
+    border-radius: 0px 0px 1000px 0px;
 }
 
 #banner{
-    position: relative;
+    position: absolute;
     left: -7px;
     top: -9px;
     width: 1348px;
+    background: url(/img/pag-home/banner\ \(2\).png);
 }
 
 #container-formulario{
@@ -138,9 +167,16 @@ body{
     left: 515px;
     width: 200px;
     height: 50px;
+    color: #4191EC;
     border: 3px solid #4191EC;
     border-radius: 25px;
-    font-size: 20px;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+#reservar-botao:hover{
+    border: 3px solid #2BB2B2;
+    color: #000000;
 }
 
 #titulo{
@@ -224,7 +260,7 @@ body{
 
 #container{
     position: relative;
-    top: 70px;
+    top: 540px;
     left: 55px;
 }
 
@@ -1544,13 +1580,13 @@ a{
 
 #mapa{
     position: relative;
-    top: 2900px;
+    top: 3350px;
     left: 30px;
 }
 
 #container-contato{
     position: relative;
-    top: -105px;
+    top: 350px;
 }
 
 #endereco{
@@ -1592,9 +1628,14 @@ a{
     top: 3897px;
     width: 180px;
     height: 50px;
-    background: #0537B5;
-    border-color: #0537B5;
+    background: #4393EE;
+    border-color: #4393EE;
     border-radius: 15px 15px 0px 0px;
+}
+
+#botao-voltar:hover{
+    background: #2E86EA;
+    border-color: #2E86EA;
 }
 
 #link-voltar{
